0.23
  * Defined workers can now return GEARMAN_SHUTDOWN.
  * Benchmark worker can now be told to shutdown.
  * Allocator code has been cleaned up (gearman_allocator_t).

0.22 Sun Jun 19 20:32:18 PDT 2011
  * Added gearman_work_map() for gearman_work_t describer.
  * gearman_execute_by_partition() added. 
  * gearamn_task_attr_t added.
  * Additional documentation update.
  * Issue with PHP client using automated task free (Thanks Taneli Leppä!!)
  * Fixed issue where PHP client's custom allocator was free'ing memory that did not belong to it.

0.21 Wed Jun 15 21:01:04 PDT 2011
  * Support for "drop function" in admin client
  * Fixed issue where server would not report on a bad unique value due to size
  * Forces do operations to complete no matter how the worker is designed.
  * Tasks inherit actions from client, and use them throughout execution.
  * Support for namespaces.
  * gearman_worker_define_function() has been added. It allows jobs to map out work to other workers and then aggregate the results.
  * gearman_client_run_tasks() will now reset the IO state for all connections on exit if all hosts have been marked down. The next call will check all hosts.
  * Lots of bug fixes.

0.20 Fri Apr  8 09:25:15 PDT 2011
  * gearman_client_execute() interface added
  * New types of gearman_unique_t, gearman_function_st, gearman_workload_t
  * Better error reporting from clients.
  * Server no longer hangs because of bad job list.
  * First bit of work on supporting epoch portion of protocol. John Ewart, john@johnewart.net 
  * Improved error message handling in client. 
  * Updates for manpages.

0.19 Fri Apr  1 09:50:22 PDT 2011
  * Fix bug where gearman util would create duplicate output.
  * Update sqlite queue so that it uses a prepared statement.
  * Fixes a number cases where server was not initializing default values internally correctly.  
  * gearman_client_compare()  API added. Returns true if the client connections are connects are equivalent.
