@@ -106,3 +106,4 @@ tests/var/tmp/*
 tests/worker_test
 tests/worker_test.res
 unittests/unittests
+libtest/unittest
