@@ -35,7 +35,7 @@
  *
  */
 
-#include "config.h"
+#include <config.h>
 
 #include <cstdio>
 #include <cstdlib>
@@ -145,6 +145,11 @@ int main(int args, char *argv[])
   if (vm.count("status"))
   {
     instance.push(new Operation(STRING_WITH_LEN("status\r\n")));
+  }
+
+  if (vm.count("workers"))
+  {
+    instance.push(new Operation(STRING_WITH_LEN("workers\r\n")));
   }
 
   if (vm.count("server-version"))
