@@ -727,8 +727,10 @@ gearman_job_st *gearman_worker_grab_job(gearman_worker_st *worker,
       for (worker->con= (&worker->universal)->con_list; worker->con;
            worker->con= worker->con->next)
       {
-        if (worker->con->fd == -1)
+        if (worker->con->fd == INVALID_SOCKET)
+        {
           continue;
+        }
 
         *ret_ptr= worker->con->send(worker->pre_sleep, true);
         if (gearman_failed(*ret_ptr))
@@ -753,7 +755,7 @@ gearman_job_st *gearman_worker_grab_job(gearman_worker_st *worker,
       for (worker->con= worker->universal.con_list; worker->con;
            worker->con= worker->con->next)
       {
-        if (worker->con->fd == -1)
+        if (worker->con->fd == INVALID_SOCKET)
           continue;
 
         worker->con->set_events(POLLIN);
@@ -791,7 +793,7 @@ gearman_job_st *gearman_worker_grab_job(gearman_worker_st *worker,
       else
       {
         *ret_ptr= gearman_wait(worker->universal);
-        if (gearman_failed(*ret_ptr) and (*ret_ptr != GEARMAN_TIMEOUT || worker->options.timeout_return))
+        if (gearman_failed(*ret_ptr) and (*ret_ptr != GEARMAN_TIMEOUT or worker->options.timeout_return))
         {
           return NULL;
         }
